yaml/auth-sdc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-sdc
  labels:
    app : auth-sdc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-sdc
  template:
    metadata:
      labels:
        app: auth-sdc
    spec:
      containers:
      - name : auth-sdc
        image: streamsets/datacollector:latest
        ports:
        - containerPort: 18630
        volumeMounts:
        - name: sdc-id
          mountPath: /data/sdc.id
          subPath: sdc.id
        - name: sdc-auth-token
          mountPath: /etc/sdc/application-token.txt
          subPath: application-token.txt
        - name: sdc-keystore
          mountPath: /etc/sdc/keystore.jks
          subPath: keystore.jks
        - name: sdc-keystore
          mountPath: /etc/sdc/keystore-password.txt
          subPath: keystore-password.txt
        - name: dpm-config
          mountPath: /etc/sdc/dpm.properties
          subPath: dpm.properties
      volumes:
      - name: sdc-id
        secret:
          secretName: sdc-id 
      - name: sdc-auth-token
        secret:
          secretName: sdc-auth-token
      - name: sdc-keystore
        secret:
          secretName: sdc-keystore
      - name: dpm-config
        configMap:
          name: dpm-config
---
apiVersion: v1
kind: Service
metadata:
  name: auth-sdc
  labels:
    app: auth-sdc
spec:
  type: NodePort
  ports:
  - name: http
    port: 18635
    targetPort: 18630
    protocol: TCP
  selector:
    app: auth-sdc
